Update User Registration [add] User Avatar Image
